Update to Java 21 and fix some issues with not showing all types